@@ -11,6 +11,8 @@ Changes between 2.3.5 and 2.4.DEV
   for standard datatypes and recognise collections.abc.  Thanks to
   Brianna Laugher and Mathieu Agopian.
 
+- fix issue317: assertion rewriter support for the is_package method
+
 - fix issue335: document py.code.ExceptionInfo() object returned
   from pytest.raises(), thanks Mathieu Agopian.
 
